# tapciify

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  release.yml  test.yml
benches/: ascii_benchmark.rs  bench_main.rs
examples/: ascii_colored.rs  background_string.rs  braille.rs  colored.rs  demo.rs  player.rs  threshold.rs  threshold_player.rs  thresholding.rs
src/: ascii.rs  background_string.rs  braille.rs  cli.rs  image_resizing.rs  lib.rs  macros.rs  main.rs  player.rs  prelude.rs  resize.rs  resizing.rs  threshold_utils.rs
src/renderers/: ascii.rs  background_string.rs  braille.rs  mod.rs
src/utils/: ascii.rs  mod.rs  player.rs  resize.rs  threshold.rs
src/utils/ascii/: mod.rs
src/utils/player/: mod.rs
tests/: play_frames_test.rs
