[package]
name = "tapciify"
version = "3.1.0"
edition = "2021"
readme = "README.md"
authors = ["Aleksei Rybin <0xalekseirybin@gmail.com>"]
description = "CLI tool that can let you view images in terminal as ASCII art"
keywords = ["image", "ascii", "terminal", "cli"]
license = "MIT"

# Don't forget to update `.github/workflows/test.yml`
rust-version = "1.74"

documentation = "https://docs.rs/tapciify"
repository = "https://github.com/tapciify/tapciify"
homepage = "https://github.com/tapciify/tapciify"
categories = [
    "command-line-utilities",
    "multimedia",
    "multimedia::images",
    "multimedia::video",
    "visualization",
]

[dependencies]
image = { version = "0.24", features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
    "dxt",
    "dds",
    "farbfeld",
    "openexr",
    "qoi",
], default_features = false }
colored = "2"
thiserror = "1.0"

clap = { version = "4", features = ["derive"], optional = true }
crossterm = { version = "0.27", optional = true }
glob = { version = "0.3", optional = true }
imageproc = { version = "0.23", optional = true, default_features = false }
indicatif = { version = "0.17", optional = true }
rayon = { version = "1", optional = true }

[features]
default = ["full"]
full = ["rayon", "player"]

player = [
    "dep:clap",
    "dep:crossterm",
    "dep:indicatif",
    "dep:glob",
    "dep:imageproc",
]

rayon = ["dep:rayon", "imageproc/rayon", "image/jpeg_rayon"]
multithreading = ["rayon"]
parallelism = ["rayon"]

[[bin]]
name = "tapciify"
required-features = ["player"]
