[package]
name = "tapciify"
version = "3.4.0"
edition = "2024"
readme = "README.md"
authors = ["Aleksei Rybin <aleksei@tapni.su>"]
description = "CLI tool for converting your images into ASCII art"
keywords = ["image", "ascii", "terminal", "cli"]
license = "MIT"

# Don't forget to update `.github/workflows/test.yml`
rust-version = "1.87"

documentation = "https://docs.rs/tapciify"
repository = "https://github.com/tapnisu/tapciify"
homepage = "https://github.com/tapnisu/tapciify"
categories = [
    "command-line-utilities",
    "multimedia",
    "multimedia::images",
    "multimedia::video",
    "visualization",
]
exclude = [
    "assets/*",
    ".github/*",
    "examples/*",
    ".envrc",
    "flake.lock",
    "flake.nix",
    "default.nix",
    "shell.nix",
]

[dependencies]
image = { version = "0.25", features = [
    "default-formats",
], default-features = false }
colored = "3"

clap = { version = "4", features = ["derive"], optional = true }
crossterm = { version = "0.29", optional = true }
glob = { version = "0.3", optional = true }
imageproc = { version = "0.25", optional = true, default-features = false }
indicatif = { version = "0.18", optional = true }
rayon = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.8"

[features]
default = ["full"]
full = ["rayon", "player"]

braille = ["threshold-utils"]
background-string = ["threshold-utils"]
threshold-utils = []
player = [
    "braille",
    "background-string",
    "dep:clap",
    "dep:crossterm",
    "dep:glob",
    "dep:imageproc",
    "dep:indicatif",
]
rayon = ["dep:rayon", "imageproc/rayon", "image/rayon", "indicatif/rayon"]
multithreading = ["rayon"]
parallelism = ["rayon"]

[[bin]]
name = "tapciify"
required-features = ["player"]

[[bench]]
name = "bench_main"
harness = false
